# fit_bot

./: .gitignore
backend/src/: exceptions.py  main.py  pyproject.toml
backend/src/models/: queries.py
