[tool.poetry]
name = "fit-bot-backend"
version = "0.1.0"
description = ""
authors = ["Guy Wolf <guywolf2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
